# sboxmgr

./: .commitlintrc.json  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .secrets.baseline  AUTHORS  CHANGELOG.md  GITHUB_ISSUES_READY.md  LICENSE  MANIFEST.in  README.md  REAL_CODE_ASSESSMENT.md  SHOWCASE.md  SUMMARY.md  TODO.md  TODO_MULTIPLE_SUBSCRIPTIONS.md  bandit-report.json  bandit_report.json  bandit_report_new.json  check_availability.py  config.json  config.template.json  config_fetch.py  coverage.xml  custom.json  exclusions.json  i18n_unused_keys.json  install_wizard.py  pyfiles.txt  pyproject.toml  pytest.ini  requirements.txt  run_install_wizard.sh  selected_config.json  service_manage.py  singbox_full_validator_v2.py  struct.json  template.json  (+16 more)
.github/ISSUE_TEMPLATE/: 00-issue-summary.md  01-subscription-pipeline-architecture.md  02-security-framework.md  03-exclusion-manager-v2.md  04-dx-automation-tools.md  05-cli-ux-improvements.md  06-performance-optimization.md  config.yml
.github/workflows/: README.md  ci-dev.yml  ci-smoke.yml  i18n-check.yml  quality-check.yml  release-main.yml  release.yml  test.yml
.hooks/: check_build_contents.py  quick_import_check.py
.llmstruct_index/: install_wizard.ast.json  install_wizard.struct.json  logging_setup.ast.json  logging_setup.struct.json  update_singbox.ast.json  update_singbox.struct.json
.llmstruct_index/modules/: __init__.ast.json  __init__.struct.json  config_fetch.ast.json  config_fetch.struct.json  config_generate.ast.json  config_generate.struct.json  module_installer.ast.json  module_installer.struct.json  protocol_validation.ast.json  protocol_validation.struct.json  server_management.ast.json  server_management.struct.json  service_manage.ast.json  service_manage.struct.json  utils.ast.json  utils.struct.json
.llmstruct_index/src/: main.ast.json  main.struct.json
analysis_env/: architecture_scanner.py
archive/install_wizard_legacy/: README.md  wizard.py
docs/: AGENT_BRIDGE_USAGE.md  CHANGELOG.md  CLI_INBOUND_PARAMETERS.md  DEVELOPMENT.md  DOCUMENTATION_PLAN.md  PHASE2_INTEGRATION_GUIDE.md  PRODUCTION_READY_FEATURES.md  PRODUCTION_READY_FEATURES_SUMMARY.md  README.md  SECURITY_POLICIES.md  TECHNICAL_DEBT.md  TESTING.md  cli_security.md  i18n.md  llm_integration.md  pipeline.md  sec_checklist.md  security.md  struct.json  testplan.md
docs/archive/: PHASE2_INTEGRATION_GUIDE.md  PHASE3_COMPLETION_REPORT.md  PHASE3_GHERKIN_SCENARIOS.md  PRODUCTION_READY_FEATURES.md  PRODUCTION_READY_FEATURES_SUMMARY.md  PYDANTIC_VALIDATION_SUMMARY.md  comprehensive_validation_report.md  schema_completeness_report.md  singbox_coverage_report.md  test_configs_report.md  validation_results.json
docs/cli/: cli_dump.md
event_log/: meta-log
examples/: cli_inbound_usage.md  middleware_test.py  mixed_uri_list.txt  phase3_architecture_demo.py  phase4_integration_demo.py  phase4_profile_demo.json  production_ready_features.json
modules/: config_fetch.py  config_generate.py  protocol_validation.py  server_management.py
plans/: README.md  decision_list.md  refactor_log.jsonl  struct_analysis_log.md  struct_refactor_next_steps.md
plugin_templates/: mytestfetcher.py  mytestparsedparsedvalidator.py  template_test_testfetcher.py  test_mytestfetcher.py  test_mytestparsedparsedvalidator.py  testfetcher.py
schemas/: README.md  agent-profile.schema.json  app-settings.schema.json  client-profile.schema.json  complete_singbox_schema.json  current_singbox_schema.json  export-profile.schema.json  filter-profile.schema.json  full-profile.schema.json  inbound-profile.schema.json  legacy-profile.schema.json  logging-config.schema.json  routing-profile.schema.json  sboxmgr-config.schema.json  schema_summary.md  service-config.schema.json  singbox-config.schema.json  subscription-profile.schema.json  test_schema.json  ui-profile.schema.json
scripts/: README_cli_dump.md  analyze_crashes.py  build_complete_schema.py  check_dependencies.py  collect_docs.py  comprehensive_validation.py  dump_cli_commands.py  fix_docstring_structure.py  gen_callgraph.py  generate_plugin_index.py  generate_schemas.py  generate_test_configs.py  get_profile_help.py  monitor_ci_and_bots.py  push_and_monitor.sh  test_integration.py  test_new_inbounds.py  test_supported_protocols.py
src/: __init__.py  main.py
tests/: __init__.py  config.json  conftest.py  integration_test.py  mvp_ecosystem_test.py  test_agent_bridge.py  test_bugfixes_stage3.py  test_bugfixes_stage3_additional.py  test_cli_common.py  test_cli_config_commands.py  test_cli_errors.py  test_cli_exclusions.py  test_cli_export.py  test_cli_general.py  test_cli_integration.py  test_cli_list.py  test_cli_list_service_outbounds.py  test_cli_main.py  test_cli_matrix.py  test_cli_routing_flags.py  test_cli_selection.py  test_cli_utils.py  test_config_fetch.py  test_config_generate.py  test_config_generate_bugfixes.py  test_config_loader.py  test_config_management.py  test_config_protocol.py  test_configs_basic.py  test_data_processor_parse_fix.py  test_dependencies.py  test_enrichment_middleware.py  test_env_variables.py  test_events.py  test_exclusion_manager.py  test_exclusion_manager_enhanced.py  test_exclusion_models_comprehensive.py  test_exclusions.py  test_exclusions_v2.py  test_exclusions_v2_comprehensive.py  (+60 more)
tmp/: cli_dump.md  cli_dump_improved.md
(+502 files in other folders)
