[project]
name = "sboxmgr"
version = "1.4.0"
description = "Sing-box config manager CLI (sboxctl)"
authors = [
    { name = "Mikhail Stepanov", email = "kpblcaoo@gmail.com" }
]
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
keywords = [
    "sing-box",
    "proxy",
    "configuration",
    "cli",
    "tui",
    "subscription",
    "network",
    "vpn",
]
urls = { Homepage = "https://github.com/kpblcaoo/sboxmgr", Documentation = "https://github.com/kpblcaoo/sboxmgr/tree/main/docs", Repository = "https://github.com/kpblcaoo/sboxmgr.git", Issues = "https://github.com/kpblcaoo/sboxmgr/issues", Changelog = "https://github.com/kpblcaoo/sboxmgr/blob/main/CHANGELOG.md" }
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "python-dotenv",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "packaging>=21.0",
    "toml>=0.10.2",
    "textual>=0.52.0",
    "sbox-common @ file:///home/kpblc/projects/subbox/sbox-common",
]

[project.scripts]
sboxctl = "sboxmgr.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "black",
    "pre-commit",
    "detect-secrets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
